chore(core): extract interface RunContext
This commits provides new core classes to build and manipulate RunContext.

Changes:
* Rename RunContext class to DefaultRunContext
* Create new RunContext interface with no dependency on Micronaut
* Delegate all RunContext factory methods to RunContextFactory class
* Delegate RunContext hydratation to new RunContextInitializer class
* Delegate variables build to new RunVariables class