@@ -1,25 +1,75 @@
 package io.kestra.core.runners;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
-import io.micronaut.context.ApplicationContext;
+import io.kestra.core.metrics.MetricRegistry;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.TaskRun;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
-
-import java.util.Map;
+import io.kestra.core.plugins.PluginConfigurations;
+import io.kestra.core.storages.InternalStorage;
+import io.kestra.core.storages.StorageContext;
+import io.kestra.core.storages.StorageInterface;
+import io.micronaut.context.ApplicationContext;
+import io.micronaut.context.annotation.Value;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+
+import java.net.URI;
+import java.nio.file.Path;
+import java.util.Map;
+import java.util.Optional;
 
 @Singleton
 public class RunContextFactory {
     @Inject
-    private ApplicationContext applicationContext;
+    protected ApplicationContext applicationContext;
+
+    @Inject
+    protected PluginConfigurations pluginConfigurations;
+
+    @Inject
+    protected VariableRenderer variableRenderer;
+
+    @Inject
+    protected StorageInterface storageInterface;
+
+    @Inject
+    protected MetricRegistry metricRegistry;
+
+    @Inject
+    protected RunContextCache runContextCache;
+
+    @Value("${kestra.encryption.secret-key}")
+    protected Optional<String> secretKey;
+
+    @Value("${kestra.tasks.tmp-dir.path}")
+    protected Optional<String> tempBasedPath;
+
+    @Inject
+    private RunContextLoggerFactory runContextLoggerFactory;
+
+    // hacky
+    public RunContextInitializer initializer() {
+        return applicationContext.getBean(RunContextInitializer.class);
+    }
 
     public RunContext of(Flow flow, Execution execution) {
-        return new RunContext(applicationContext, flow, execution);
+        RunContextLogger runContextLogger = runContextLoggerFactory.create(execution);
+
+        return newBuilder()
+            // Logger
+            .withLogger(runContextLogger)
+            // Execution
+            .withPluginConfiguration(Map.of())
+            .withStorage(new InternalStorage(runContextLogger.logger(), StorageContext.forExecution(execution), storageInterface))
+            .withVariables(newRunVariablesBuilder()
+                .withFlow(flow)
+                .withExecution(execution)
+                .withDecryptVariables(true)
+                .build(runContextLogger))
+            .build();
     }
 
     public RunContext of(Flow flow, Task task, Execution execution, TaskRun taskRun) {
@@ -27,20 +77,78 @@ public class RunContextFactory {
     }
 
     public RunContext of(Flow flow, Task task, Execution execution, TaskRun taskRun, boolean decryptVariables) {
-        return new RunContext(applicationContext, flow, task, execution, taskRun, decryptVariables);
+        RunContextLogger runContextLogger = runContextLoggerFactory.create(taskRun, task);
+
+        return newBuilder()
+            // Logger
+            .withLogger(runContextLogger)
+            // Task
+            .withPluginConfiguration(pluginConfigurations.getConfigurationByPluginTypeOrAliases(task.getType(), task.getClass()))
+            .withStorage(new InternalStorage(runContextLogger.logger(), StorageContext.forTask(taskRun), storageInterface))
+            .withVariables(newRunVariablesBuilder()
+                .withFlow(flow)
+                .withTask(task)
+                .withExecution(execution)
+                .withTaskRun(taskRun)
+                .withDecryptVariables(decryptVariables)
+                .build(runContextLogger))
+            .build();
     }
 
     public RunContext of(Flow flow, AbstractTrigger trigger) {
-        return new RunContext(applicationContext, flow, trigger);
+        RunContextLogger runContextLogger = runContextLoggerFactory.create(flow, trigger);
+        return newBuilder()
+            // Logger
+            .withLogger(runContextLogger)
+            // Task
+            .withPluginConfiguration(pluginConfigurations.getConfigurationByPluginTypeOrAliases(trigger.getType(), trigger.getClass()))
+            .withVariables(newRunVariablesBuilder()
+                .withFlow(flow)
+                .withTrigger(trigger)
+                .build(runContextLogger)
+            )
+            .build();
     }
 
+
     @VisibleForTesting
-    public RunContext of(Map<String, Object> variables) {
-        return new RunContext(applicationContext, variables);
+    public RunContext of(final Map<String, Object> variables) {
+        RunContextLogger runContextLogger = new RunContextLogger();
+        return newBuilder()
+            .withLogger(runContextLogger)
+            .withStorage(new InternalStorage(
+                runContextLogger.logger(),
+                new StorageContext() {
+                    @Override
+                    public URI getContextStorageURI() {
+                        return URI.create("");
+                    }
+                },
+                storageInterface
+            ))
+            .withVariables(variables)
+            .build();
     }
 
     @VisibleForTesting
     public RunContext of() {
-        return new RunContext(applicationContext, ImmutableMap.of());
+        return of(Map.of());
+    }
+
+    private DefaultRunContext.Builder newBuilder() {
+        return new DefaultRunContext.Builder()
+            // inject mandatory services and config
+            .withApplicationContext(applicationContext) // TODO - ideally application should not be injected here
+            .withMeterRegistry(metricRegistry)
+            .withVariableRenderer(variableRenderer)
+            .withStorageInterface(storageInterface)
+            .withSecretKey(secretKey)
+            .withTempBasedPath(Path.of(tempBasedPath.orElse(System.getProperty("java.io.tmpdir"))));
+    }
+
+    protected RunVariables.Builder newRunVariablesBuilder() {
+        return new RunVariables.DefaultBuilder(secretKey)
+            .withEnvs(runContextCache.getEnvVars())
+            .withGlobals(runContextCache.getGlobalVars());
     }
 }
